// Vitest Snapshot v1

exports[`PasswordReset > matches snapshot in en 1`] = `
<div
  class="password-reset"
  data-v-d0420da1=""
>
  <h1
    data-v-d0420da1=""
  >
    Enter your new password.
  </h1>
  
  
  <form
    class="form auth-form"
    data-v-7181b6e1=""
    data-v-d0420da1=""
    novalidate=""
  >
    <div
      class="field password"
      data-v-7181b6e1=""
    >
      <label
        data-v-7181b6e1=""
        for="password"
      >
        Enter password
      </label>
      <input
        data-v-7181b6e1=""
        name="password"
        type="password"
      />
      <!---->
    </div>
    <div
      class="field confirm-password"
      data-v-7181b6e1=""
    >
      <label
        data-v-7181b6e1=""
        for="confirm-password"
      >
        Re-enter password
      </label>
      <input
        data-v-7181b6e1=""
        name="confirmation"
        type="password"
      />
      <!---->
    </div>
    <div
      class="submit"
      data-v-7181b6e1=""
    >
      <button
        class="loading-button"
        data-v-3fdbc7b3=""
        data-v-7181b6e1=""
      >
        <div
          class="label"
          data-v-3fdbc7b3=""
        >
          <span
            data-v-3fdbc7b3=""
          >
            Change Password
          </span>
        </div>
        <!---->
      </button>
    </div>
  </form>
</div>
`;

exports[`PasswordReset > matches snapshot in fr 1`] = `
<div
  class="password-reset"
  data-v-d0420da1=""
>
  <h1
    data-v-d0420da1=""
  >
    Enter your new password.[fr]
  </h1>
  
  
  <form
    class="form auth-form"
    data-v-7181b6e1=""
    data-v-d0420da1=""
    novalidate=""
  >
    <div
      class="field password"
      data-v-7181b6e1=""
    >
      <label
        data-v-7181b6e1=""
        for="password"
      >
        Enter password
      </label>
      <input
        data-v-7181b6e1=""
        name="password"
        type="password"
      />
      <!---->
    </div>
    <div
      class="field confirm-password"
      data-v-7181b6e1=""
    >
      <label
        data-v-7181b6e1=""
        for="confirm-password"
      >
        Re-enter password
      </label>
      <input
        data-v-7181b6e1=""
        name="confirmation"
        type="password"
      />
      <!---->
    </div>
    <div
      class="submit"
      data-v-7181b6e1=""
    >
      <button
        class="loading-button"
        data-v-3fdbc7b3=""
        data-v-7181b6e1=""
      >
        <div
          class="label"
          data-v-3fdbc7b3=""
        >
          <span
            data-v-3fdbc7b3=""
          >
            Change Password
          </span>
        </div>
        <!---->
      </button>
    </div>
  </form>
</div>
`;
